--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -9,6 +9,7 @@ spring.redis.port=6379
 spring.redis.host=localhost
 
 server.port=8080
+server.servlet.context-path=/qrcodeauth
 
 mybatis-plus.type-aliases-package=com.fogfore.qrcodeauth.entity
 mybatis-plus.mapper-locations=classpath*:com/fogfore/qrcodeauth/mapper/persistence/**/*.xml
