+用户登录拦截 +添加用户访问认证相关接口

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -11,5 +11,5 @@ spring.redis.host=localhost
 server.port=8081
 server.servlet.context-path=/qrcodeauth
 
-mybatis-plus.type-aliases-package=com.fogfore.qrcodeauth.entity
+mybatis-plus.type-aliases-package=com.fogfore.qrcodeauth.entity,com.fogfore.qrcodeauth.vo
 mybatis-plus.mapper-locations=classpath*:com/fogfore/qrcodeauth/mapper/persistence/**/*.xml
